# hotl-bot-2

./: .replit  keep_alive.py  message_handler.py  pyproject.toml  settings.py  utils.py  your_bot.py
assets/: dailychanges.txt  lib.py  workingexcel.xlsx
commands/: bestcommandever.py  commands.py  daily_changes.py  example_command.py  get_events.py
events/: daily_events_auto.py  update_files_event.py  weekly_events_auto.py
