[tool.poetry]
name = "repl_python3_discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.8.0"
bs4 = "^0.0.1"
discord = "^1.7.3"
emoji = "^1.5.0"
pandas = "^1.3.3"
Flask = "^2.0.2"
openpyxl = "^3.0.9"
schedule = "^1.1.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
